apps/on-prem/user-apps/goldilocks/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: goldilocks
  labels:
    name: goldilocks
    goldilocks.fairwinds.com/enabled: "true"
