apps/on-prem/user-apps/goldilocks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks-httproute
  namespace: goldilocks
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - goldilocks.binarybraids.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - kind: Service
        name: goldilocks-goldilocks-dashboard
        namespace: goldilocks
        port: 80
